# Programming

./: .gitignore
Bash/: 4.sh
C++/RS/: .gitignore
C++/cnstr/: Makefile  compile_commands.json  main.cpp
C++/composition/: sifrovanje.cpp
C++/graph/: Makefile  dfs_demo.cpp  graph.hpp  graph_algorithm.hpp  main.cpp
C++/modules/: main.cpp  utils.cppm  utils.pcm
C++/monad/: Makefile  composition.cpp  main.cpp
C++/monad_backup/: Makefile  composition.cpp  monads.cpp
C++/practice/: .gitignore
C++/ranges/: transform.cpp  zip.cpp
C++/razno/: operatori.cpp  ref.cpp  strukture.cpp
C/ast/: 1  ast.c  ast.h  example.c
C/liste/: Makefile  liste.c  liste.h  primer_liste.c
Haskell/: 01_factorial.hs  01_intro.hs  02_example.hs  02_factorial.hs  03_example.hs  03_lists_tuples.hs  03_lists_tuples_ptrn.hs  04_cph_ho_fn.hs  04_cph_hofn.hs  examples.hs  qsort.hs  tmp.hs
Haskell/01_uvod/: 02_factorial.hs
Haskell/examples/: 01_secret_message.hs  my_list.hs  records.hs  safe_func.hs
Haskell/ispiti/: 16_17.hs
Haskell/monad/: fish.hs  list.hs
Nim/: example.nim  static_json.nim  vector_iterate.nim
PP/ispit/: Makefile  README.md  make.sh  template.latex
PPJ/PPJ_Kolokvijumi/: 1-kol.py
PPJ/Python/: 1-kol.py  2-kol.sh  4.sh  podsetnik_python.py  python.py  python_regex.py
PPJ/brojevi_jan_2019/: List.cpp  List.hpp  Makefile  brojevi  lexer.lex  parser.ypp  primer_a.txt  primer_c.txt
PPJ/kvaternioni_sept1_2018/: kvaternion.hpp  primer_a.txt
PPJ/kvaternioni_sept1_2019/: Makefile  kvaternion.cpp  parser.ypp  primer_b.txt  primer_c.txt
PPJ/matlab_jun_2018/: parser.ypp
PPJ/razlomci_feb_2019/: lexer.lex  test_b.txt  test_e.txt
PPJ/razlomci_jun_2019/: Makefile  test_d.txt  test_f.txt
Prolog/: 00_podsetnik.pl  04_constraints.pl  05_liste.pl  07_ogranicenja.pl
Python/: 00_podsetnik.py  01_basics.py  03_dir_json.py  05_go_functional.py  06_class.py  09_walkdir_regex_pp.py  Vestacka_Inteligencija
Python/PPJ_Regex_zadatak/: 1.py
Python/a_star_solver/: README.md  a_star_solver.ipynb  a_star_solver.py
Python/constraints/: 01_basics.py  02_magic_number.py  03_variables.py
Python/graph/: main.py
Python/usefull_scripts/: pp
RS/01_qt_widgets_cmake/: CMakeLists.txt
RS/02_signals_and_slots/: mainwindow.ui
RS/03_Threads/01_ThreadSubclassing/: CMakeLists.txt  mainwindow.cpp
RS/03_Threads/02_ThreadWorker/: CMakeLists.txt  mainwindow.cpp  mytask.h
RS/04_QtConcurrent/: CMakeLists.txt  main.cpp
RS/Qt/04_Files/02_Read_XML/: CMakeLists.txt  main.cpp
RS/examples/: CMakeLists.txt
Rust/: const_fn.rs
Rust/cnstr/: Cargo.toml
Rust/hello_world/: Cargo.toml
Rust/ppgr-domaci2/: Cargo.toml
Rust/ppgr-domaci2/src/: main.rs
Rust/ppgr-domaci3/: Cargo.toml
Rust/slerp/: README.md
Scala/: Nit.scala  TESTING.scala  Vezbanje_01.scala  Vezbanje_05.scala
VI/: README.md  make.sh
VI/a_star_solver/: README.md
VI/code/: vi_01_graph.py  vi_02_dfs_bfs.py  vi_03_dijkstra.py
VI/izdvojeni_kodovi/: vi_04_heuristic.py
VI/my_graph/: graph.py
c++/: cpp_interesting_stuff.cpp
c++/cnstr/: constraints.hpp  main.cpp  tuple_iterator.hpp
c++/hana/: main.cpp
c++/intro/: 01_hello_world.cpp
c++/qt/04_Files/01_Read_Write/: CMakeLists.txt  input_file.txt  main.cpp
c++/ranges/: filter.cpp
c++/useful_examples/: rule_of_5.cpp
haskell/01_uvod/: 04_cph_hofn.hs  05_qsort.hs
haskell/examples/: monad.hs
html/: template.html
javascript/: template.html
nim/: example.nim  types.nim  vector_iterate.nim
prolog/: 01_uvod.pl  02_zadaci.pl  03_porodicno_stablo.pl  06_zagonetke.pl
python/: 02_regex.py  04_random_datetime.py  07_decorator.py  08_additional.py  primer.py  primer1.py
rust/: filter.rs
scala/: 08_Jun_1_2019.scala  HelloWorld.scala  Jun_1_2019_Distribuirano.scala  Jun_2_2018.scala  Vezbanje_02.scala  Vezbanje_03.scala  Vezbanje_04.scala  Vezbanje_06.scala  Vezbanje_07.scala
(+205 files in other folders)
