[package]
name = "ppgr-domaci2"
version = "0.1.0"
authors = ["Nebojša Koturović <necer95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = "0.14.4"
nalgebra = "0.23.0"
nalgebra-lapack = "0.14.0"
